[build-system]
requires = ["setuptools>=41.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
# disallow_untyped_calls = true # temp disabled
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
plugins = "sqlmypy"

# Gradually roll out mypy by ignoring all files not explicitly opted in.
[[tool.mypy.overrides]]
module = "comet_core.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "comet_core.data_store",
  "comet_core.models"
]
ignore_errors = false
